[gd_scene load_steps=10 format=3 uid="uid://ba0c673pkere7"]

[ext_resource type="Script" path="res://scripts/GUI.gd" id="1_366xt"]
[ext_resource type="PackedScene" uid="uid://d0myxgmrgyquy" path="res://scen/gui/inventory.tscn" id="2_li0oh"]
[ext_resource type="Theme" uid="uid://bg8fsepfigyn0" path="res://theme/base_opt.tres" id="2_rh2mb"]
[ext_resource type="Texture2D" uid="uid://bkvmydfn5saxg" path="res://joystick/textures/joystick_tip.png" id="3_fxqtb"]
[ext_resource type="PackedScene" uid="uid://dmr0fcamx7t56" path="res://joystick/virtual_joystick.tscn" id="4_csjpt"]

[sub_resource type="GDScript" id="GDScript_5u52p"]
script/source = "extends Button

var a: bool = true


func _on_pressed():
	if a:
		$\"..\".modulate.a = 0.00
	else:
		$\"..\".modulate.a = 1.00
	a = !a
"

[sub_resource type="GDScript" id="GDScript_b1duj"]
script/source = "extends Button

var item_id
var control_id

func _ready():
	Event.connect(\"usev\",visus)

func _on_pressed():
	Event.emit_signal(\"control\",control_id)
	Event.control_id = control_id

func visus(vis,item_id,control,mp_id):
	item_id = item_id
	control_id = control
"

[sub_resource type="GDScript" id="GDScript_26y8o"]
script/source = "extends Button



func _on_pressed():
	Event.emit_signal(\"menu\")
"

[sub_resource type="GDScript" id="GDScript_x21m7"]
script/source = "extends Label

@onready var fps_label := %Label
var counter := 0.0

func _process(delta: float) -> void:
	counter += delta
	# Hide FPS label until it's initially updated by the engine (this can take up to 1 second).
	fps_label.visible = counter >= 1.0
	fps_label.text = \"%d FPS (%.2f mspf)\" % [Engine.get_frames_per_second(), 1000.0 / Engine.get_frames_per_second()]
"

[node name="GUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_366xt")

[node name="hp" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.0
offset_right = 128.0
offset_bottom = 64.0
grow_horizontal = 2
size_flags_vertical = 0
theme = ExtResource("2_rh2mb")
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 35
text = "HP:100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
size_flags_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="TouchScreenButton" type="TouchScreenButton" parent="VBoxContainer"]
position = Vector2(-168, -168)
scale = Vector2(1.52, 1.57)
texture_normal = ExtResource("3_fxqtb")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
modulate = Color(1, 1, 1, 0.2)
layout_mode = 0
offset_right = 192.0
offset_bottom = 192.0
alignment = 1

[node name="fire" type="TouchScreenButton" parent="VBoxContainer2"]
scale = Vector2(1.92, 1.92)
texture_normal = ExtResource("3_fxqtb")

[node name="Virtual Joystick" parent="." instance=ExtResource("4_csjpt")]
layout_mode = 1
offset_top = -328.0
offset_right = 320.0
offset_bottom = 0.0
clampzone_size = 40.0
joystick_mode = 1

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.694
anchor_right = 0.694
offset_left = -31.488
offset_right = 32.512
offset_bottom = 64.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 35
text = "hui"
script = SubResource("GDScript_5u52p")

[node name="use" type="Button" parent="."]
unique_name_in_owner = true
visible = false
self_modulate = Color(1, 1, 1, 0.411765)
top_level = true
light_mask = 3
visibility_layer = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = 612.0
offset_right = 56.0
offset_bottom = 674.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme = ExtResource("2_rh2mb")
disabled = true
button_mask = 7
text = "use"
script = SubResource("GDScript_b1duj")

[node name="menu2" type="Button" parent="."]
visibility_layer = 15
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -64.0
offset_bottom = 62.0
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 4
theme = ExtResource("2_rh2mb")
button_mask = 7
text = "menu"
language = "E_GB"
script = SubResource("GDScript_26y8o")

[node name="Control" parent="." instance=ExtResource("2_li0oh")]
top_level = true
layout_mode = 1
anchors_preset = 7
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = -64.0
offset_right = 0.0
offset_bottom = -64.0
grow_vertical = 0

[node name="pick_up" type="Button" parent="."]
unique_name_in_owner = true
visible = false
self_modulate = Color(1, 1, 1, 0.411765)
top_level = true
light_mask = 3
visibility_layer = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = 60.0
offset_right = 64.0
offset_bottom = 146.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme = ExtResource("2_rh2mb")
button_mask = 7
text = "pick_up"

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -64.0
offset_top = 64.0
offset_bottom = 128.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 25
script = SubResource("GDScript_x21m7")

[connection signal="pressed" from="VBoxContainer/TouchScreenButton" to="." method="_on_touch_screen_button_pressed"]
[connection signal="pressed" from="VBoxContainer2/fire" to="." method="_on_fire_pressed"]
[connection signal="pressed" from="Button" to="Button" method="_on_pressed"]
[connection signal="pressed" from="use" to="use" method="_on_pressed"]
[connection signal="pressed" from="menu2" to="menu2" method="_on_pressed"]
[connection signal="pressed" from="pick_up" to="." method="_on_pick_up_pressed"]
